--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "backbone-deep-model": "^0.11.0",
     "browserify": "^10.1.3",
-    "node-static": "^0.7.6",
-    "object-path": "^0.9.2"
+    "node-static": "^0.7.6"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
