--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Using Backbone and jQuery take `item.json` and render a form similar to the form illustrated in `form.png`.",
   "main": "server.js",
   "dependencies": {
-    "backbone-deep-model": "^0.11.0",
-    "browserify": "^10.1.3",
+    // "backbone-deep-model": "^0.11.0",
+    // "browserify": "^10.1.3",
     "node-static": "^0.7.6"
   },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^3.8.0"
-  },
+  // "devDependencies": {
+  //   "grunt": "^0.4.5",
+  //   "grunt-browserify": "^3.8.0"
+  // },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
